Fix overflow at the side

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 html {
   height: 100%;
+  max-height: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -9,6 +11,7 @@ body {
   padding: 0;
   background-color: #ccc;
   height: 100%;
+  max-height: 100%;
   overflow: hidden;
 }
 
@@ -137,6 +140,8 @@ strong {
 video {
   position: absolute;
   visibility: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 canvas {
